# MyAVStudy

./: README.md
AStest/FfmpegDemo/: README.md  settings.gradle
AStest/FfmpegDemo/app/: build.gradle
AStest/FfmpegDemo/app/src/androidTest/java/com/wpf/ffmpegdemo/: ExampleInstrumentedTest.kt
AStest/FfmpegDemo/app/src/main/java/com/wpf/ffmpegdemo/: MainActivity.kt
AStest/FfmpegDemo/app/src/main/res/values/: themes.xml
AStest/FfmpegDemo/app/src/main/res/values-night/: themes.xml
AStest/FfmpegShared/: settings.gradle
AStest/FfmpegShared/app/: build.gradle
AStest/FfmpegShared/app/src/main/: AndroidManifest.xml
AStest/FfmpegShared/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
AStest/FfmpegShared/app/src/main/java/com/wpf/ffmpegdemo/: BaseActivity.kt  BaseFragment.kt  FfmpegTools.kt  MainActivity.kt
AStest/FfmpegShared/app/src/main/java/com/wpf/ffmpegdemo/play/: FfmpegPlayAct.kt
AStest/FfmpegShared/app/src/main/res/values/: strings.xml
AStest/FfmpegShared/app/src/test/java/com/wpf/ffmpegdemo/: ExampleUnitTest.kt
AStest/FfmpegStatic/: settings.gradle
AStest/FfmpegStatic/app/: build.gradle
AStest/FfmpegStatic/app/src/main/cpp/: .gitignore  CMakeLists.txt  native-lib.cpp
AStest/FfmpegStatic/app/src/main/java/com/wpf/ffmpegtest/: BaseActivity.kt  FfmpegTools.kt  MainActivity.kt
AStest/FfmpegStatic/app/src/main/java/com/wpf/ffmpegtest/play/: FfmpegPlayAct.kt
AStest/FfmpegStatic/app/src/main/res/layout/: act_ffmpegplay.xml
AStest/FfmpegStatic/app/src/main/res/values/: strings.xml
AStest/FfmpegTest/: .gitignore  settings.gradle
AStest/FfmpegTest/app/: build.gradle
AStest/FfmpegTest/app/src/main/: AndroidManifest.xml  jniLibs下载链接.txt
AStest/FfmpegTest/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
AStest/FfmpegTest/app/src/main/cpp/util/: LogUtil.h
AStest/FfmpegTest/app/src/main/java/com/wpf/ffmpegtest/: BaseFragment.kt  FfmpegTools.kt  MainActivity.kt
AStest/FfmpegTest/app/src/main/java/com/wpf/ffmpegtest/play/: FfmpegPlayAct.kt
VStest/: 说明.md
VStest/Ffmpeg_Test/FfmpegFirst/: FfmpegFirst.cpp  FfmpegFirst.sln  FfmpegFirst.vcxproj  FfmpegFirst.vcxproj.filters  audio.aac
VStest/Ffmpeg_Test/FfmpegFirst/Debug/: FfmpegFirst.exe.recipe  FfmpegFirst.vcxproj.FileListAbsolute.txt  vc142.idb
VStest/Ffmpeg_Test/FfmpegFirst/Debug/FfmpegFirst.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  FfmpegFirst.lastbuildstate
VStest/Ffmpeg_Test/FfmpegFirst/x64/Debug/: FfmpegFirst.exe.recipe  FfmpegFirst.ilk  FfmpegFirst.vcxproj.FileListAbsolute.txt  vc142.idb
VStest/Ffmpeg_Test/FfmpegFirst/x64/Debug/FfmpegFirst.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  FfmpegFirst.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
VStest/pcm_wav/pcm_wav/: main.cpp  pcm_wav.sln  pcm_wav.vcxproj
VStest/pcm_wav/pcm_wav/Debug/: pcm_wav.exe.recipe  pcm_wav.ilk  pcm_wav.vcxproj.FileListAbsolute.txt  vc142.idb
VStest/pcm_wav/pcm_wav/Debug/pcm_wav.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  pcm_wav.lastbuildstate
资料/: 收集资料汇总.md
